appId: estudify.develop
---
- launchApp:
    clearState: true
- assertVisible: "Treine\nSempre"
- tapOn: "→ Pular"
- assertVisible: "Bem Vindo!"
