appId: estudify.develop
---
# - runFlow: "../8_perfil_assinatura_planos/AssinaturaPlanos.yaml"
- runFlow: "../2_autenticacao/Login.yaml"

- assertVisible: "Treinar"
- tapOn: "Matemática"
- assertVisible: "Matemática"
- tapOn: "Matemática Básica"
- assertVisible: "Como você quer treinar hoje?"
- tapOn: "Questões originais da banca"
- assertVisible: "Enviar"
- tapOn: "A"
- tapOn: "Enviar"
- assertVisible: "Explicação"
- tapOn: "Finalizar Treino"
- assertVisible: "Resultados do Treino"
- tapOn: "Voltar"
- assertVisible: "Treinar"
