appId: estudify.develop
---
- runFlow: "../8_perfil_assinatura_planos/AssinaturaPlanos.yaml"
- assertVisible: "Treinar"
- tapOn: "Simulados"
- assertVisible: "Simulado 1"
- tapOn: "Simulado 1"
- tapOn: "Dia 2"
- tapOn: "A"
- tapOn: "Próxima"
- tapOn: "A"
- tapOn: "Próxima"

- tapOn:
    point: 88%,9%
- tapOn: "Finalizar Simulado"
- tapOn: "Confirmar"
- tapOn:
    point: 82%,8%
