appId: estudify.develop
---
# - runFlow: "../3_onboarding/Onboarding.yaml"
- runFlow: "../2_autenticacao/Login.yaml"

- assertVisible: "Treinar"
- tapOn: "Cronograma"
- assertVisible: "Cronograma"
- tapOn: "Semana seguinte"
- tapOn: "Dom"
