appId: estudify.develop
---
# - runFlow: "../8_perfil_assinatura_planos/PerfilAssinaturaPlanos.yaml"
- runFlow: "../2_autenticacao/Login.yaml"

- assertVisible: "Treinar"
- tapOn: "Progresso"
- scroll