appId: estudify.develop
---
# - runFlow: "../3_onboarding/Onboarding.yaml"
- runFlow: "../2_autenticacao/Login.yaml"


- assertVisible: "Treinar"
- tapOn: "Abrir perfil"
- scroll
- tapOn: "Gerenciar Planos"
- assertVisible: "Selecione o plano de sua preferência"
- tapOn: "Assinar agora"
- assertVisible: "Seu plano foi ativado com sucesso. Bons estudos! 🎉"
- tapOn: "OK"